import { Button } from '@/core/components/ui/button';
import { Drawer, DrawerContent, DrawerDescription, DrawerHeader, DrawerTitle } from '@/core/components/ui/drawer';
import { Text } from '@/core/components/ui/text';
import { LogoutButton } from '@/features/auth/presentation/components/logout-button';
import React from 'react';
import { ActivityIndicator, View } from 'react-native';
import { AddProductForm } from '../components/add-product-form';
import { DeleteAllProductsButton } from '../components/delete-all-products-button';
import { ListProducts } from '../components/list-products';
import { useProducts } from '../context/product-context';
...
