...

  return (
    <View className="flex-1 bg-white">
      <Text className="text-lg p-10 text-center text-gray-400 tracking-wide">UniMejores</Text>
      <View className="w-full max-w-lg mx-auto flex-1 px-4">
        <Text variant="h1" className="text-gray-800 text-center">
          ¿Con que materia quieres empezar?
        </Text>
        <Text className="italic text-gray-400 mt-2 mb-6 text-center">
          Elije la que te guste mas.
        </Text>

        {pendingLoading ? (
...
