...
            ) : null
          }
          ListFooterComponent={
            <View>
              <View className="items-center my-6">
                <Button
                  testID="add-course-button"
                  size="lg"
                  className="rounded-full w-full"
                  style={{ backgroundColor: "#8E97FD", paddingVertical: 18 }}
                  onPress={() => setIsAddOpen(true)}
                >
                  <Text className="text-white font-bold tracking-widest text-base">CREAR UN NUEVO CURSO</Text>
...
